tests/ui/async-await/unnecessary-await.stderr
error[E0277]: the trait `IntoFuture` is not implemented for `()`
  --> $DIR/unnecessary-await.rs:9:11
   |
LL |     boo().await;
   |     ----- ^^^^^ the trait `IntoFuture` is not implemented for `()`, which is required by `(): IntoFuture`
   |     |
   |     this call returns `()`
   |
   = note: required for `()` to implement `IntoFuture`
help: remove the `.await`
   |
LL -     boo().await;
LL +     boo();
   |
help: alternatively, consider making `fn boo` asynchronous
   |
LL | async fn boo() {}
   | +++++

error[E0277]: the trait `IntoFuture` is not implemented for `()`
  --> $DIR/unnecessary-await.rs:28:10
   |
LL |     e!().await;
   |         -^^^^^
   |         ||
   |         |the trait `IntoFuture` is not implemented for `()`, which is required by `(): IntoFuture`
   |         help: remove the `.await`
   |
   = note: required for `()` to implement `IntoFuture`

error[E0277]: the trait `IntoFuture` is not implemented for `()`
  --> $DIR/unnecessary-await.rs:22:15
   |
LL |         $expr.await
   |               ^^^^^
   |               |
   |               the trait `IntoFuture` is not implemented for `()`, which is required by `(): IntoFuture`
   |               remove the `.await`
...
LL |     f!(());
   |     ------ in this macro invocation
   |
   = note: required for `()` to implement `IntoFuture`
   = note: this error originates in the macro `f` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait `IntoFuture` is not implemented for `()`
  --> $DIR/unnecessary-await.rs:36:20
   |
LL |     for x in [] {}.await
   |                   -^^^^^
   |                   ||
   |                   |the trait `IntoFuture` is not implemented for `()`, which is required by `(): IntoFuture`
   |                   help: remove the `.await`
   |
   = note: required for `()` to implement `IntoFuture`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
